# color_picker

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/pick/: mod.rs  pickwindow.ui
