[package]
name = "color_picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.3.1"
gtk-macros = "0.3.0"
[dependencies.ashpd]
git = "https://github.com/bilelmoussaoui/ashpd"
features = ["feature_gtk4", "feature_pipewire"]
